# inspired

./: .gitattributes  .gitignore  LICENSE  README.md  VERSION  config  environment.yml  pyproject.toml
.github/: actions.yml
.github/workflows/: actions.yml
conda.recipe/: meta.yaml
examples/Ba3ZnRu2O9/: BZRO.cif
examples/Cu/: FORCE_SETS  POSCAR-unitcell  mesh.conf  scqe_1kk.params  scqe_h11.params  scqq_hkk.params
examples/TeO2/: POSCAR  scqe_10l.params  scqq_hk0.params
gui/: convert.sh  dft_worker.py  dp_worker.py  help_dft.ui  help_dp.ui  help_mlff.ui  help_oclimax.ui  inspired.py  inspired.ui  latent_space_model.py  load_data.py  mlff_worker.py  oclimax.py  oclimax.ui  oclimax_params.py  pandas_model.py  set_paths.py  set_paths.ui  ui_help_dft.py  ui_help_dp.py  ui_help_mlff.py  ui_help_oclimax.py  ui_inspired.py  ui_oclimax.py  ui_set_paths.py
install/: README.md  conda_env_cpu.sh  conda_env_gpu.sh  environment_inspired.yml  install-cpu.txt  install-gpu.txt  install.sh
mlff/matgl/: model.json  model.pt  state.pt
model/: autoencoder_training_history.txt  decoder.pt
src/inspired/: config  dft_worker.py  dp_worker.py  help_oclimax.ui  inspired.py  mlff_worker.py  oclimax.py  set_paths.py  ui_set_paths.py  version.py
src/inspired/gui/: dft_worker.py  dp_worker.py  inspired.ui  latent_space_model.py  mlff_worker.py  oclimax.py  oclimax_params.py  set_paths.py  ui_help_dp.py  ui_inspired.py
src/inspired/oclimax/: merge_csv.py  oclimax_convert  oclimax_run
